--- a/sfg-petclinic/pet-clinic-web/src/main/resources/templates/owners/index.html
+++ b/sfg-petclinic/pet-clinic-web/src/main/resources/templates/owners/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+	th:replace="~{fragments/layout ::layout(~{::body},'owners')}">
 <head>
 <meta charset="ISO-8859-1">
 <title>Owner's list</title>
@@ -7,19 +8,19 @@
 <body>
 	<h1 th:text="'List of Owners'">List of Vets......</h1>
 
-	<table>
+	<table class="table table-striped">
 		<thead>
 			<tr>
-				<th>Id</th>
-				<th>First Name</th>
-				<th>Last Name</th>
+				<th style="width: 150px;">Id</th>
+				<th style="width: 150px;">First Name</th>
+				<th style="width: 150px;">Last Name</th>
 			</tr>
 		</thead>
 		<tbody>
 			<tr th:each="owner:${owners}">
-				<td th:text="${owner.id}"></td>
-				<td th:text="${owner.firstName}"></td>
-				<td th:text="${owner.lastName}"></td>
+				<td th:text="${owner.id}">1</td>
+				<td th:text="${owner.firstName}">Joey</td>
+				<td th:text="${owner.lastName}">Diaz</td>
 			</tr>
 		</tbody>
 	</table>
