--- a/sfg-petclinic/pet-clinic-web/src/main/resources/templates/owners/index.html
+++ b/sfg-petclinic/pet-clinic-web/src/main/resources/templates/owners/index.html
@@ -6,7 +6,7 @@
 <title>Owner's list</title>
 </head>
 <body>
-	<h1 th:text="'List of Owners'">List of Vets......</h1>
+	<h1 th:text="'List of Owners'">List of Owners......</h1>
 
 	<table class="table table-striped">
 		<thead>
